Simplify file reading code